resturcted module file management, added browser dev fallback

--- a/components/camera.html
+++ b/components/camera.html
@@ -1,1 +1,6 @@
+<video id="video" autoplay width="640px" height="1136px"></video>
 
+<canvas id="canvas" width="640px" height="1136px"></canvas>
+
+<!-- Capture button -->
+<button id="capture">Capture!</button>
